--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/*Universal and main page styles*/
 * {
     box-sizing: border-box;
     padding: 0;
@@ -6,35 +7,6 @@
 
 body {
     background-color: #d9dcd6;
-}
-
-.header {
-    padding: 20px;
-    background-color: #2a607c;
-    color: #ffffff;
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-}
-
-.header h1 {
-    display: inline-block;
-    font-size: 48px;
-}
-
-.header h1 .seo {
-    color: #d9dcd6;
-}
-
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
-    display: inline-block;
-    margin-left: 25px;
 }
 
 a {
@@ -52,6 +24,41 @@ p {
     margin-bottom: 25px;
     background-size: cover;
     background-position: center;
+}
+
+/*Header below*/
+
+.header {
+    padding: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #2a607c;
+    color: #ffffff;
+}
+
+.header h1 {
+    display: inline-block;
+    font-size: 48px;
+}
+
+.header h1 .seo {
+    color: #d9dcd6;
+}
+
+.pagemenu {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
+.pagemenu ul {
+    list-style-type: none;
+}
+
+.pagemenu ul li {
+    display: inline-block;
+    margin-left: 25px;
 }
 
 /* Below content blocks can be aligned depending on type1 or type2 class*/
