--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ p {
 }
 
 .backgroundimage {
-    height: 800px;
+    height: 112vh;
     width: 100%;
     margin-bottom: 25px;
     background-size: cover;
